# scaffold-haskell

./: .gitignore  README.md  flake.nix
scripts/: render-project.sh
templates/: CLAUDE.md  flake.nix  ghcid.sh  template.cabal
templates/bench/: Main.hs
templates/lib/: template.hs
templates/scripts/: format.sh  verify.sh
templates/src/: Main.hs
templates/test/: Main.hs  {{project_name_capitalized}}Spec.hs
