cabal-version:      3.4
name:               {{project_name}}
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://sonic-stride.com/
license:            MIT
author:             Johan Yngman
maintainer:         johan.yngman@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:      -Weverything -Wno-missing-signatures -Wno-missing-exported-signatures
                      -Wno-implicit-prelude -Wno-missing-export-lists -Wno-missing-import-lists
                      -Wno-monomorphism-restriction -Wno-type-defaults -Wno-missing-safe-haskell-mode
                      -Wno-unsafe -Wno-missing-local-signatures -Wno-missing-kind-signatures
                      -Wno-all-missed-specialisations -Wno-missed-specialisations -Wno-ambiguous-fields
                      -Wno-missing-deriving-strategies -Wno-prepositive-qualified-module
                      -Wno-unused-top-binds -threaded

common extensions
    default-extensions: OverloadedStrings,
                        DuplicateRecordFields,
                        NoFieldSelectors,
                        StrictData,
                        OverloadedRecordDot,
                        AllowAmbiguousTypes,
                        DataKinds,
                        TypeFamilies,
                        RecordWildCards,
                        DeriveDataTypeable

library
    import:           warnings
    import:           extensions
    hs-source-dirs:   lib
    exposed-modules:  {{project_name_capitalized}}
    build-depends:    base,
                      text,
                      bytestring,
                      async,
                      unordered-containers,
                      directory,
                      filepath,
                      stm,
                      transformers,
                      binary,
                      foreign-store
    hs-source-dirs:   src
    default-language: GHC2021

executable {{project_name}}
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base,
                      {{project_name}},
                      cmdargs
    hs-source-dirs:   src
    default-language: GHC2021

